--- a/app/src/main/res/layout/fragment_news_list.xml
+++ b/app/src/main/res/layout/fragment_news_list.xml
@@ -5,11 +5,10 @@
              android:layout_width="match_parent" android:layout_height="match_parent"
              tools:context=".ui.fragment.newslist.NewsListFragment">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_list_news"
             android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>
+            android:layout_width="match_parent"/>
 
     <ProgressBar
             android:id="@+id/list_progressBar"
