--- a/app/src/main/res/layout/fragment_news_detail.xml
+++ b/app/src/main/res/layout/fragment_news_detail.xml
@@ -11,6 +11,13 @@
             android:layout_height="match_parent"
             android:text="@string/hello_blank_fragment"/>
 
+    <ImageView android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:contentDescription="@string/image"
+               android:src="@drawable/ic_launcher_background"
+    />
+
+
     <ProgressBar
             android:id="@+id/details_progressBar"
             android:layout_width="wrap_content"
