--- a/app/src/main/res/layout/fragment_news_details.xml
+++ b/app/src/main/res/layout/fragment_news_details.xml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".ui.fragment.newsdetail.NewsDetailFragment">
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <data>
-        <variable
-                name="viewModel"
-                type="com.github.kornilovmikhail.mvvmandroidproject.ui.fragment.newsdetail.NewsDetailViewModel"/>
-    </data>
+    <!--<data>-->
+        <!--<variable-->
+                <!--name="viewModel"-->
+                <!--type="com.github.kornilovmikhail.mvvmandroidproject.ui.fragment.newsdetail.NewsDetailViewModel"/>-->
+    <!--</data>-->
 
     <FrameLayout
             android:layout_width="match_parent"
@@ -19,26 +16,26 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
             <ImageView
-                    android:id="@+id/img_details"
-                    android:layout_width="200dp"
-                    android:layout_height="200dp"
+                    android:id="@+id/iv_details_image"
+                    android:layout_width="300dp"
+                    android:layout_height="300dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintVertical_bias="0.3"
-                    app:imageUrl="@{viewModel.imageUrl}"
+                    app:layout_constraintVertical_bias="0.05"
                     android:contentDescription="@string/img_description"/>
 
             <TextView
                     android:id="@+id/tv_detail_description"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintTop_toBottomOf="@id/img_details"
+                    android:width="300dp"
+                    app:layout_constraintTop_toBottomOf="@id/iv_details_image"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintVertical_bias="0.3"/>
+                    app:layout_constraintVertical_bias="0.1"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
