design changes in main

--- a/app/src/main/res/layout/news_list_item.xml
+++ b/app/src/main/res/layout/news_list_item.xml
@@ -2,16 +2,35 @@
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent" android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="16dp">
 
-    <TextView
-            android:id="@+id/tv_list_item_name"
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            tools:text="Title"
-            android:textStyle="bold"/>
+            android:layout_height="match_parent">
+
+        <ImageView
+                android:id="@+id/iv_main_image"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHorizontal_bias="0.015"
+                android:contentDescription="@string/img_description"/>
+
+        <TextView
+                android:id="@+id/tv_list_item_name"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                app:layout_constraintStart_toEndOf="@id/iv_main_image"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:textSize="18sp"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
