--- a/app/src/main/res/layout/news_list_item.xml
+++ b/app/src/main/res/layout/news_list_item.xml
@@ -15,6 +15,7 @@
                 android:id="@+id/iv_main_image"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
+                android:transitionName="@string/transaction_img_news"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
